--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,32 @@
-*{
-  margin:0;
-  padding:0;
+* {
+	margin: 0;
+	padding: 0;
 }
-body{
-  background-color:rgb(244, 245, 245)
+body {
+	background-color: rgb(244, 245, 245);
 }
-@keyframes vibe{
-  0%{
-     opacity:0
-  }
-  100%{
-     opacity:1
-  }
+@keyframes vibe {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
-.clicked{
-  color:#1677ff !important;
+.clicked {
+	color: #1677ff !important;
+}
+.w-md-editor {
+	height: 100vh !important;
 }
 .directory::-webkit-scrollbar {
-  width: 5px;
+	width: 5px;
 }
 
 .directory::-webkit-scrollbar-thumb {
-  background-color: #e4e6eb;
-  border-radius: 10px;
+	background-color: #e4e6eb;
+	border-radius: 10px;
 }
 .directory::-webkit-scrollbar-track {
-  background-color: transparent;
+	background-color: transparent;
 }
